k8s/ingress.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-route
spec:
  to:
    kind: Service
    name: httpd-service
  port:
    targetPort: 8080
  tls:
  wildcardPolicy: None
